--- a/web/index.html
+++ b/web/index.html
@@ -1,15 +1,92 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-	<nav>
-	네비게이션입니다.
-	</nav>
-	<article>
-	본문입니다.
-	</article>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>한길사</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <!-- Bootstrap theme -->
+    <link href="bootstrap/css/bootstrap-theme.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="bootstrap/css/index-theme.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body role="document">
+
+    <!-- 상단메뉴입니다! -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">한길사</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">도서안내 <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">총 도서목록</a></li>
+                <li class="divider"></li>
+                <!-- <li class="dropdown-header">Nav header</li> -->
+                <li><a href="#">새로나온 책</a></li>
+                <li><a href="#">수상 및 선정도서</a></li>
+                <li><a href="#">한길사의 저자들</a></li>
+              </ul>
+            </li>
+            <li><a href="#about">자료실</a></li>
+            <li><a href="#about">회사소개</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+		      <li><a href="#"><span class="glyphicon glyphicon-user"></span> 회원가입</a></li>
+		      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> 로그인</a></li>
+	      </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- container안에 만들 페이지를 작성해 주세요! -->
+    <div class="container theme-showcase" role="main" id="container">
+	
+	<!-- 여기부터 시작하시면 됩니다! -->
+      <div class="jumbotron">
+        <h1>예제 페이지 입니다.</h1>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;코스타111기 웹 프로젝트는 웹표준을 지키지 않은 홈페이지를 웹표준을 지킨 페이지로 리뉴얼 하는 것이고, 리뉴얼 대상으로 한길사 페이지를 선정했습니다.<br><br>&nbsp;&nbsp;&nbsp;&nbsp; 지금 보고 있는 이 페이지는 부트스트렙에 있는 탬플릿을 사용했습니다. 이 레이아웃을 기반으로 한길사에 어울리는 디자인으로 변경하는 작업을 하려합니다. 현 상태에서 변경하길 원하는 부분과 새로이 적용하고 싶은 부분과 관련된 의견은 언제든지 연락주시길 바랍니다.<br>&nbsp;&nbsp;&nbsp;&nbsp; 작업을 하실때는 web폴더에 새로운 html파일을 만들어서 index.html파일 내용을 전부 복사한 후 붙여 넣고 컨테이너 안에 표시한 영역 안에서 마음껏 페이지를 제작하시면 됩니다. jQuery파일은 javascriptFiles폴더에 위치하고 있으며 각자 생성한 javascript파일은 이 javascriptFiles폴더에 저장하면 됩니다. 마찬가지로 새로이 만든 css파일은 cssFiles폴더에 저장하면 됩니다.<br>&nbsp;&nbsp;&nbsp;&nbsp; 부트스트랩을 이용하여 반응성 웹이 되도록 클레스에 부트스트랩 기능을 지정해 주세요. 자신만의 스타일을 적용하고 싶을 때는 부트스트렙폴더안에 있는 css폴더에 새로운 css파일을 만들고 20번째 줄에 bootstrap/css/index-theme.css 대신 새로만든 css파일명을 적어서 스타일을 적용하면 됩니다.<br>&nbsp;&nbsp;&nbsp;&nbsp; 스타일을 적용 할 때는 컨테이너 내부의 스타일만 적용해주시길 바랍니다. 컨테이너 외부의 디자인은 다같이 상의 후에 적용하기로 하겠습니다. 다들 마지막 프로젝트 즐겁게 진행합시다! 화이팅!</p>
+      </div>
+	<!-- 여기까지 사용하시면 됩니다! -->
+    
+    <!-- 푸터가 위치할 곳 입니다! -->  
+      <footer>
+        <p>&copy; kosta111기 2016</p>
+      </footer>
+
+    </div>
+	
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
+  </body>
 </html>
