--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
     <link href="bootstrap/css/bootstrap-theme.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="bootstrap/css/index-theme.css" rel="stylesheet">
+    <link href="cssFiles/index-theme.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
